--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"react": "^18.1.0",
-		"react-dom": "^18.1.0"
+		"react-dom": "^18.1.0",
+		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
