download from manba

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"htmlparser2": "^10.0.0",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
